--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,23 @@
 plugins {
     id 'java0-library'
 }
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testImplementation (
+            "com.codeborne:selenide:7.2.3",
+            "org.junit.jupiter:junit-jupiter:5.9.2",
+            "org.slf4j:slf4j-simple:2.0.6"
+    )
+}
+
+tasks.withType(JavaCompile){
+    options.encoding = 'UTF-8'
+
+}
+test {
+    useJUnitPlatform()
+}
